# course_work

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
src/: operation.py  utils.py
tests/: conftest.py  test_operation.py  test_utils.py
